# meridian

./: .gitignore  .pylintrc  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  __init__.py  constants.py  pyproject.toml  setup.py
.github/actions/create-version-tag/: action.yml
.github/actions/install-meridian/: action.yml
.github/actions/publish/: action.yml
.github/actions/version-check/: action.yml
.github/workflows/: check-url-reachability.yml  ci.yml  publish.yml  pytest_and_autopublish.yml  stale-pr-cleanup.yml
analysis/: BUILD  __init__.py  analyzer.py  analyzer_test.py  formatter.py  formatter_test.py  optimizer.py  optimizer_test.py  summarizer.py  summarizer_test.py  summary_text.py  test_utils.py  visualizer.py  visualizer_test.py
analysis/templates/: BUILD  chart.html.jinja  stats.html.jinja  summary.html.jinja  table.html.jinja
data/: BUILD  __init__.py  input_data.py  input_data_test.py  load.py  load_test.py  test_utils.py
data/sample/: lagged_sample_data_media_only.csv  sample_data_media_and_rf.csv  sample_national_data_w_population_w_geo.csv  sample_national_data_w_population_wo_geo.csv  sample_national_data_wo_population_w_geo.csv  sample_national_data_wo_population_wo_geo.csv
data/simulated_data/csv/: geo_media_rf.csv  national_media.csv
data/simulated_data/pkl/: national_media.pkl
data/simulated_data/xlsx/: geo_media_rf.xlsx
demo/: Meridian_Getting_Started.ipynb  Meridian_MLflow_Demo.ipynb  Meridian_RF_Demo.ipynb  RF_Data_Simulation_for_Meridian.ipynb
meridian/: __init__.py  constants.py  version.py
meridian/analysis/: __init__.py  analyzer.py  analyzer_test.py  formatter.py  formatter_test.py  optimizer.py  optimizer_test.py  summarizer.py  summarizer_test.py  summary_text.py  test_utils.py  visualizer.py  visualizer_test.py
meridian/analysis/templates/: card.html.jinja  chart.html.jinja  chips.html.jinja  insights.html.jinja  stats.html.jinja  style.scss  summary.html.jinja
meridian/data/: __init__.py  arg_builder.py  arg_builder_test.py  data_frame_input_data_builder.py  data_frame_input_data_builder_test.py  input_data.py  input_data_builder.py  input_data_builder_test.py  input_data_test.py  load.py  load_test.py  nd_array_input_data_builder.py  nd_array_input_data_builder_test.py  test_utils.py  time_coordinates.py  time_coordinates_test.py
meridian/data/sample/: lagged_sample_data_with_organic_and_non_media.csv
meridian/data/simulated_data/csv/: geo_all_channels.csv  geo_media.csv  geo_media_rf.csv  national_all_channels.csv  national_media.csv  national_media_rf.csv
meridian/data/simulated_data/pkl/: geo_all_channels.pkl  geo_media.pkl  geo_media_rf.pkl  national_media.pkl
meridian/data/simulated_data/xlsx/: geo_all_channels.xlsx  geo_media.xlsx  national_media.xlsx
meridian/data/unit_testing_data/: README.md  expected_national_data.csv  lagged_sample_data_media_and_rf.csv  lagged_sample_data_rf_only.csv  sample_data_media_only.csv  sample_data_no_revenue_per_kpi.csv  sample_data_rf_only.csv  sample_data_with_organic_and_non_media.csv
meridian/demo/: Meridian_Getting_Started.ipynb
meridian/mlflow/: __init__.py  autolog.py  autolog_test.py
meridian/model/: __init__.py  adstock_hill.py  adstock_hill_test.py  knots.py  knots_test.py  media.py  media_test.py  model.py  model_test.py  model_test_data.py  posterior_sampler.py  posterior_sampler_test.py  prior_distribution.py  prior_distribution_test.py  prior_sampler.py  prior_sampler_test.py  spec.py  spec_test.py  transformers.py  transformers_test.py
meridian/model/test_data/: sample_posterior_media_and_rf.nc  sample_posterior_media_only.nc  sample_posterior_media_only_no_controls.nc  sample_posterior_national.nc  sample_posterior_non_paid.nc  sample_posterior_rf_only.nc  sample_prior_media_and_rf.nc  sample_prior_media_only.nc  sample_prior_media_only_no_controls.nc  sample_prior_national.nc  sample_prior_non_paid.nc  sample_prior_rf_only.nc  sample_trace.nc  trained_model_media_and_rf.pkl  trained_model_media_only.pkl  trained_model_rf_only.pkl
model/: BUILD  __init__.py  adstock_hill.py  adstock_hill_test.py  knots.py  knots_test.py  model.py  model_test.py  prior_distribution.py  prior_distribution_test.py  spec.py  spec_test.py  transformers.py  transformers_test.py
model/test_data/: sample_posterior_media_and_rf.nc  sample_posterior_rf_only.nc  sample_prior_media_only.nc  sample_trace.nc
