[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata
name = "google-meridian"
description = """\
  Google's open source mixed marketing model library, helps you understand \
  your return on investment and direct your ad spend with confidence. \
  """
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "The Meridian Authors", email="no-reply@google.com"},
]
classifiers = [  # List of https://pypi.org/classifiers/
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = [
  "mmm",
]

# pip dependencies of the project
# Installed locally with `pip install -e .`
dependencies = [
  "arviz",
  "altair >= 5",
  "immutabledict",
  "joblib",
  "numpy >= 2.0.2, < 3",
  "pandas >= 2.2.2, < 3",
  "scipy >= 1.13.1, < 2",
  "tensorflow >= 2.18, < 2.19",
  "tensorflow-probability >= 0.25, < 0.26",
  "tf-keras >= 2.18, < 2.19",
  "xarray",
]

# `version` is automatically set by flit to use `meridian.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/google/meridian"
repository = "https://github.com/google/meridian"
changelog = "https://github.com/google/meridian/blob/main/CHANGELOG.md"
documentation = "https://developers.google.com/meridian"

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install -e .[dev]`
dev = [
  "pytest>=8.0.0",
  "pytest-xdist",
  "pylint>=2.6.0",
  "pyink",
]
# Colab deps
# Installed through `pip install -e .[colab]`
colab = [
  "psutil",
]
# GPU deps
# Installed through `pip install -e .[and-cuda]`
and-cuda = [
  "tensorflow[and-cuda] >= 2.18, < 2.19",
]

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
preview = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[build-system]
# Build system specify which backend is used to build/install the project (flit,
# poetry, setuptools,...). All backends are supported by `pip install`
requires = [
  "setuptools >= 61.0.0",
  "libsass",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["meridian*"]
exclude = ["*test"]

[tool.setuptools.dynamic]
version = {attr = "meridian.__version__"}